# vacancies-manager

./: README.md  pyproject.toml  tables.sql
src/: dbmanager.py  main.py  settings.py  vacancies_api_manager.py
